fix(alerter): secure notice receiver contracts