@@ -17,6 +17,11 @@
 
 package org.apache.hertzbeat.alert.controller;
 
+import static org.mockito.ArgumentMatchers.any;
+import static org.hamcrest.Matchers.hasItem;
+import static org.hamcrest.Matchers.containsString;
+import static org.hamcrest.Matchers.not;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
@@ -26,10 +31,17 @@ import static org.springframework.test.web.servlet.request.MockMvcRequestBuilder
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.put;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
+import org.apache.hertzbeat.alert.dto.NoticeReceiverMutationResponse;
+import org.apache.hertzbeat.alert.dto.NoticeReceiverOptionResponse;
+import org.apache.hertzbeat.alert.dto.NoticeReceiverRequest;
+import org.apache.hertzbeat.alert.dto.NoticeReceiverResponse;
+import org.apache.hertzbeat.alert.service.NoticeReceiverContractMapper;
+import org.apache.hertzbeat.alert.service.NoticeReceiverContractService;
 import org.apache.hertzbeat.alert.service.impl.NoticeConfigServiceImpl;
 import org.apache.hertzbeat.common.constants.CommonConstants;
 import org.apache.hertzbeat.common.entity.alerter.NoticeReceiver;
@@ -40,9 +52,11 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
+import org.mockito.ArgumentCaptor;
 import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.dao.DataAccessResourceFailureException;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
@@ -62,6 +76,9 @@ class NoticeConfigControllerTest {
 
     @Mock
     private NoticeConfigServiceImpl noticeConfigService;
+
+    @Mock
+    private NoticeReceiverContractService noticeReceiverService;
 
     @InjectMocks
     private NoticeConfigController noticeConfigController;
@@ -86,7 +103,7 @@ class NoticeConfigControllerTest {
         NoticeReceiver noticeReceiver = new NoticeReceiver();
         noticeReceiver.setName("tom");
         noticeReceiver.setId(5L);
-        noticeReceiver.setAccessToken("c03a568a306f8fd84dab51ff03cf6af6ba676a3be940c904e1df2de34853739d");
+        noticeReceiver.setAccessToken("raw-secret-access-token");
         noticeReceiver.setEmail("2762242004@qq.com");
         noticeReceiver.setHookUrl("https://www.tancloud.cn");
         noticeReceiver.setType((byte) 5);
@@ -121,50 +138,76 @@ class NoticeConfigControllerTest {
     @Test
     void addNewNoticeReceiver() throws Exception {
         NoticeReceiver noticeReceiver = getNoticeReceiver();
-        System.out.println(noticeReceiver);
+        NoticeReceiverResponse response = safeResponse(noticeReceiver);
+        when(noticeReceiverService.create(any(NoticeReceiverRequest.class)))
+                .thenReturn(new NoticeReceiverMutationResponse(5L, "created", response));
         this.mockMvc.perform(post("/api/notice/receiver")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(JsonUtil.toJson(noticeReceiver)))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.code").value((int) CommonConstants.SUCCESS_CODE))
-                .andExpect(jsonPath("$.msg").value("Add success"))
+                .andExpect(jsonPath("$.data.status").value("created"))
                 .andReturn();
+    }
+
+    @Test
+    void addReceiverAcceptsStructuredOptions() throws Exception {
+        NoticeReceiver persisted = NoticeReceiver.builder()
+                .id(6L)
+                .name("mail")
+                .type((byte) 1)
+                .email("ops@example.com")
+                .build();
+        when(noticeReceiverService.create(any(NoticeReceiverRequest.class)))
+                .thenReturn(new NoticeReceiverMutationResponse(6L, "created", safeResponse(persisted)));
+
+        this.mockMvc.perform(post("/api/notice/receiver")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content("""
+                                {"name":"mail","type":1,"options":{"email":"ops@example.com"}}
+                                """))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.data.status").value("created"));
+
+        ArgumentCaptor<NoticeReceiverRequest> captor = ArgumentCaptor.forClass(NoticeReceiverRequest.class);
+        verify(noticeReceiverService).create(captor.capture());
+        assertEquals("ops@example.com", captor.getValue().getOptions().getEmail());
     }
 
     @Test
     void editNoticeReceiver() throws Exception {
         NoticeReceiver noticeReceiver = getNoticeReceiver();
-        System.out.println(noticeReceiver);
+        NoticeReceiverResponse response = safeResponse(noticeReceiver);
+        when(noticeReceiverService.update(any(NoticeReceiverRequest.class)))
+                .thenReturn(new NoticeReceiverMutationResponse(5L, "updated", response));
         this.mockMvc.perform(put("/api/notice/receiver")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(JsonUtil.toJson(noticeReceiver)))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.code").value((int) CommonConstants.SUCCESS_CODE))
-                .andExpect(jsonPath("$.msg").value("Edit success"))
+                .andExpect(jsonPath("$.data.status").value("updated"))
                 .andReturn();
 
     }
 
     @Test
     void deleteNoticeReceiver() throws Exception {
-        NoticeReceiver noticeReceiver = getNoticeReceiver();
-
-        when(noticeConfigService.getReceiverById(7565463543L))
-                .thenReturn(noticeReceiver);
-        when(noticeConfigService.getReceiverById(6565463543L))
-                .thenReturn(null);
+        when(noticeReceiverService.delete(7565463543L))
+                .thenReturn(new NoticeReceiverMutationResponse(7565463543L, "deleted", null));
+        when(noticeReceiverService.delete(6565463543L))
+                .thenReturn(NoticeReceiverMutationResponse.missing(6565463543L));
 
 
         this.mockMvc.perform(delete("/api/notice/receiver/{id}", 6565463543L))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.code").value((int) CommonConstants.SUCCESS_CODE))
-                .andExpect(jsonPath("$.msg").value("The relevant information of the recipient could not be found, please check whether the parameters are correct"))
+                .andExpect(jsonPath("$.data.status").value("missing"))
                 .andReturn();
 
         this.mockMvc.perform(delete("/api/notice/receiver/{id}", 7565463543L))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.code").value((int) CommonConstants.SUCCESS_CODE))
-                .andExpect(jsonPath("$.msg").value("Delete success"))
+                .andExpect(jsonPath("$.data.status").value("deleted"))
                 .andReturn();
 
     }
@@ -174,18 +217,20 @@ class NoticeConfigControllerTest {
         NoticeReceiver receiver1 = new NoticeReceiver();
         receiver1.setId(1L);
         receiver1.setName("Receiver1");
+        receiver1.setType((byte) 3);
 
         NoticeReceiver receiver2 = new NoticeReceiver();
         receiver2.setId(2L);
         receiver2.setName("Receiver2");
+        receiver2.setType((byte) 3);
 
-        Page<NoticeReceiver> receiverPage = new PageImpl<>(
-                Arrays.asList(receiver1, receiver2),
+        Page<NoticeReceiverResponse> receiverPage = new PageImpl<>(
+                Arrays.asList(safeResponse(receiver1), safeResponse(receiver2)),
                 PageRequest.of(0, 8, Sort.by("id").descending()),
                 2
         );
 
-        when(noticeConfigService.getNoticeReceivers("Receiver", 0, 8)).thenReturn(receiverPage);
+        when(noticeReceiverService.page("Receiver", 0, 8)).thenReturn(receiverPage);
 
         this.mockMvc.perform(MockMvcRequestBuilders.get("/api/notice/receivers")
                         .param("name", "Receiver")
@@ -208,21 +253,36 @@ class NoticeConfigControllerTest {
     @Test
     void getReceiverById() throws Exception {
         NoticeReceiver noticeReceiver = getNoticeReceiver();
-        when(noticeConfigService.getReceiverById(7565463543L))
-                .thenReturn(noticeReceiver);
-        when(noticeConfigService.getReceiverById(6565463543L))
+        when(noticeReceiverService.get(7565463543L))
+                .thenReturn(safeResponse(noticeReceiver));
+        when(noticeReceiverService.get(6565463543L))
                 .thenReturn(null);
 
         this.mockMvc.perform(MockMvcRequestBuilders.get("/api/notice/receiver/{id}", 6565463543L))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.code").value((int) CommonConstants.FAIL_CODE))
-                .andExpect(jsonPath("$.msg").value("The relevant information of the recipient could not be found, please check whether the parameters are correct or refresh the page"))
+                .andExpect(jsonPath("$.msg").value("Receiver missing"))
                 .andReturn();
 
         this.mockMvc.perform(MockMvcRequestBuilders.get("/api/notice/receiver/{id}", 7565463543L))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.code").value((int) CommonConstants.SUCCESS_CODE))
+                .andExpect(jsonPath("$.data.accessToken").doesNotExist())
+                .andExpect(jsonPath("$.data.options.accessToken").doesNotExist())
+                .andExpect(jsonPath("$.data.configuredSecrets", hasItem("accessToken")))
+                .andExpect(content().string(not(containsString("raw-secret-access-token"))))
                 .andReturn();
+    }
+
+    @Test
+    void getReceiverReportsStorageUnavailableWithoutLeakingCause() throws Exception {
+        when(noticeReceiverService.get(5L))
+                .thenThrow(new DataAccessResourceFailureException("password=do-not-return"));
+
+        this.mockMvc.perform(MockMvcRequestBuilders.get("/api/notice/receiver/{id}", 5L))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.code").value((int) CommonConstants.FAIL_CODE))
+                .andExpect(jsonPath("$.msg").value("Receiver storage unavailable"));
     }
 
     @Test
@@ -332,7 +392,7 @@ class NoticeConfigControllerTest {
     @Test
     void sendTestMsg() throws Exception {
         NoticeReceiver noticeReceiver = getNoticeReceiver();
-        when(noticeConfigService.sendTestMsg(noticeReceiver))
+        when(noticeReceiverService.sendTest(any(NoticeReceiverRequest.class)))
                 .thenReturn(false);
 
         this.mockMvc.perform(post("/api/notice/receiver/send-test-msg")
@@ -344,7 +404,7 @@ class NoticeConfigControllerTest {
                 .andReturn();
 
 
-        when(noticeConfigService.sendTestMsg(noticeReceiver))
+        when(noticeReceiverService.sendTest(any(NoticeReceiverRequest.class)))
                 .thenReturn(true);
 
         this.mockMvc.perform(post("/api/notice/receiver/send-test-msg")
@@ -471,7 +531,7 @@ class NoticeConfigControllerTest {
     @Test
     void sendTestMsg_Failure() throws Exception {
         NoticeReceiver noticeReceiver = getNoticeReceiver();
-        when(noticeConfigService.sendTestMsg(noticeReceiver)).thenReturn(false);
+        when(noticeReceiverService.sendTest(any(NoticeReceiverRequest.class))).thenReturn(false);
 
         this.mockMvc.perform(post("/api/notice/receiver/send-test-msg")
                         .contentType(MediaType.APPLICATION_JSON)
@@ -481,7 +541,7 @@ class NoticeConfigControllerTest {
                 .andExpect(jsonPath("$.msg").value("Notify service not available, please check config!"))
                 .andReturn();
 
-        verify(noticeConfigService, times(1)).sendTestMsg(noticeReceiver);
+        verify(noticeReceiverService, times(1)).sendTest(any(NoticeReceiverRequest.class));
     }
 
     @Test
@@ -497,12 +557,26 @@ class NoticeConfigControllerTest {
 
     @Test
     void getAllReceivers() throws Exception {
-        List<NoticeReceiver> receivers = Arrays.asList(new NoticeReceiver(), new NoticeReceiver());
-        when(noticeConfigService.getAllNoticeReceivers()).thenReturn(receivers);
+        NoticeReceiver receiver = getNoticeReceiver();
+        List<NoticeReceiverOptionResponse> receivers = List.of(
+                new NoticeReceiverOptionResponse(receiver.getId(), receiver.getName(), receiver.getType()));
+        when(noticeReceiverService.options()).thenReturn(receivers);
 
         this.mockMvc.perform(MockMvcRequestBuilders.get("/api/notice/receivers/all"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.code").value((int) CommonConstants.SUCCESS_CODE))
+                .andExpect(jsonPath("$.data[0].accessToken").doesNotExist())
+                .andExpect(jsonPath("$.data[0].options.accessToken").doesNotExist())
+                .andExpect(jsonPath("$.data[0].options").doesNotExist())
+                .andExpect(jsonPath("$.data[0].configuredSecrets").doesNotExist())
+                .andExpect(jsonPath("$.data[0].creator").doesNotExist())
+                .andExpect(jsonPath("$.data[0].id").value(5))
+                .andExpect(jsonPath("$.data[0].name").value("tom"))
+                .andExpect(jsonPath("$.data[0].type").value(5))
                 .andReturn();
+    }
+
+    private NoticeReceiverResponse safeResponse(NoticeReceiver receiver) {
+        return new NoticeReceiverContractMapper().toResponse(receiver);
     }
 }
